feature: finalizando testes